--- a/alan-turing.html
+++ b/alan-turing.html
@@ -9,6 +9,7 @@
     .intro
     {
         text-align: center;
+        margin: auto;
     }
     .container
     {
@@ -31,6 +32,7 @@
     <div class="intro">
         <h1>Alan Turing</h1>    
         <h4> 23 June 1912 -- 07 June 1954</h4>
+        <img src="alan1.jpg" alt="Error">
         <hr>
     </div>
     <div class="container">
